# DocVerify

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  alembic.ini  pyproject.toml
conf/: .env.example  config.py  logging.conf.yml
deployments/docker/: .dockerignore  Taskfile.yaml  compose.infrastructure.yaml  compose.logging.yaml  compose.yaml  service.Dockerfile  service.prod.Dockerfile
deployments/docker/configs/grafana/: loki-config.yaml  prometheus-config.yaml  promtail-config.yaml
deployments/docker/configs/grafana/dashboards/: all-gateway-logs.json
deployments/docker/configs/grafana/provisioning/dashboards/: dashboard.yaml
deployments/docker/configs/grafana/provisioning/datasources/: datasource.yml
deployments/docker/configs/nginx/: default.conf.template
migrations/: env.py
migrations/versions/: 2025_04_15_0149-9a177f59ef99_docs_base_init.py
scripts/: startup.sh
src/: __main__.py  main.py
src/api/v1/docs/: __init__.py  handlers.py  router.py
src/db/: postgres.py
src/integrations/: logger.py  minio.py
src/integrations/metrics/: metrics.py  middleware.py
src/models/: __init__.py  base.py  document.py
src/on_startup/: logger.py
src/repositories/: base.py  doc.py
src/schema/: base.py
src/schema/info/: doc.py
src/services/: base.py  doc.py
src/utils/: generate_pdf.py  pagination.py
